---
source: src/codegen/tests/debug_tests.rs
expression: codegen
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

@a = global [11 x i32] zeroinitializer, !dbg !0
@b = global [110 x i32] zeroinitializer, !dbg !7
@c = global [11 x [10 x i32]] zeroinitializer, !dbg !12
@llvm.global_ctors = appending global [1 x { i32, ptr, ptr }] [{ i32, ptr, ptr } { i32 65535, ptr @__unit___internal___[ctor-hash]__ctor, ptr null }]

define void @__global_a__ctor(ptr %0) {
entry:
  %self = alloca ptr, align [filtered]
  store ptr %0, ptr %self, align [filtered]
  ret void
}

define void @__global_b__ctor(ptr %0) {
entry:
  %self = alloca ptr, align [filtered]
  store ptr %0, ptr %self, align [filtered]
  ret void
}

define void @__global_c___ctor(ptr %0) {
entry:
  %self = alloca ptr, align [filtered]
  store ptr %0, ptr %self, align [filtered]
  ret void
}

define void @__global_c__ctor(ptr %0) {
entry:
  %self = alloca ptr, align [filtered]
  store ptr %0, ptr %self, align [filtered]
  %__global_c__idx0 = alloca i32, align [filtered]
  store i32 0, ptr %__global_c__idx0, align [filtered]
  store i32 0, ptr %__global_c__idx0, align [filtered]
  br label %while_body

while_body:                                       ; preds = %continue1, %entry
  %load___global_c__idx0 = load i32, ptr %__global_c__idx0, align [filtered]
  %tmpVar = icmp sgt i32 %load___global_c__idx0, 10
  %1 = zext i1 %tmpVar to i8
  %2 = icmp ne i8 %1, 0
  br i1 %2, label %condition_body, label %continue1

continue:                                         ; preds = %condition_body
  ret void

condition_body:                                   ; preds = %while_body
  br label %continue

buffer_block:                                     ; No predecessors!
  br label %continue1

continue1:                                        ; preds = %buffer_block, %while_body
  %deref = load ptr, ptr %self, align [filtered]
  %load___global_c__idx02 = load i32, ptr %__global_c__idx0, align [filtered]
  %tmpVar3 = mul i32 1, %load___global_c__idx02
  %tmpVar4 = add i32 %tmpVar3, 0
  %tmpVar5 = getelementptr inbounds [11 x [10 x i32]], ptr %deref, i32 0, i32 %tmpVar4
  call void @__global_c___ctor(ptr %tmpVar5)
  %load___global_c__idx06 = load i32, ptr %__global_c__idx0, align [filtered]
  %tmpVar7 = add i32 %load___global_c__idx06, 1
  store i32 %tmpVar7, ptr %__global_c__idx0, align [filtered]
  br label %while_body
}

define void @__unit___internal___[ctor-hash]__ctor() {
entry:
  call void @__global_a__ctor(ptr @a)
  call void @__global_b__ctor(ptr @b)
  call void @__global_c__ctor(ptr @c)
  ret void
}

!llvm.module.flags = !{!17, !18}
!llvm.dbg.cu = !{!19}

!0 = !DIGlobalVariableExpression(var: !1, expr: !DIExpression())
!1 = distinct !DIGlobalVariable(name: "a", scope: !2, file: !2, line: 3, type: !3, isLocal: false, isDefinition: true)
!2 = !DIFile(filename: "<internal>", directory: "")
!3 = !DICompositeType(tag: DW_TAG_array_type, baseType: !4, size: 352, align [filtered], elements: !5)
!4 = !DIBasicType(name: "DINT", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!5 = !{!6}
!6 = !DISubrange(count: 11, lowerBound: 0)
!7 = !DIGlobalVariableExpression(var: !8, expr: !DIExpression())
!8 = distinct !DIGlobalVariable(name: "b", scope: !2, file: !2, line: 4, type: !9, isLocal: false, isDefinition: true)
!9 = !DICompositeType(tag: DW_TAG_array_type, baseType: !4, size: 3520, align [filtered], elements: !10)
!10 = !{!6, !11}
!11 = !DISubrange(count: 10, lowerBound: 11)
!12 = !DIGlobalVariableExpression(var: !13, expr: !DIExpression())
!13 = distinct !DIGlobalVariable(name: "c", scope: !2, file: !2, line: 5, type: !14, isLocal: false, isDefinition: true)
!14 = !DICompositeType(tag: DW_TAG_array_type, baseType: !15, size: 3520, align [filtered], elements: !5)
!15 = !DICompositeType(tag: DW_TAG_array_type, baseType: !4, size: 320, align [filtered], elements: !16)
!16 = !{!11}
!17 = !{i32 2, !"Dwarf Version", i32 5}
!18 = !{i32 2, !"Debug Info Version", i32 3}
!19 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, globals: !20, splitDebugInlining: false)
!20 = !{!0, !7, !12}
